# rms-assistant

./: .gitignore  CLAUDE.md  SESSION-NOTES.md  create-startup-shortcut.ps1  manifest.json  start-server.bat
agent/: .env.example  AGENTS.md  README.md  carrier-mappings.json  prompts-lock.json  prompts.json  pyproject.toml
agent/app/: __init__.py  agent.py  conversation_logger.py  main.py  observability.py  server.py
agent/app/carriers/: __init__.py  browser_agent.py  progressive.py
agent/app/tools/: __init__.py  browser.py  close_crm.py  dot_lookup.py  knowledge.py  notes.py  nowcerts.py  pdf.py  workflows.py
agent/conversations/: index.json
agent/conversations/2025-12-04/: session_140958_b0cbea.jsonl  session_141005_918edc.jsonl  session_141020_3f3e1e.jsonl  session_141033_bd64d7.jsonl  session_141158_db0d2c.jsonl  session_142144_341495.jsonl  session_142232_ffeb16.jsonl  session_142619_dbfe40.jsonl  session_142623_26d9a2.jsonl  session_142911_dadaa1.jsonl  session_142916_58639a.jsonl  session_143042_7b9e18.jsonl  session_143102_5cf5f9.jsonl  session_143102_920297.jsonl  session_143129_091a8e.jsonl  session_143129_4adb53.jsonl  session_143158_06e6a1.jsonl  session_143158_c5eaeb.jsonl  session_143209_d36c3f.jsonl  session_143209_f9b9dc.jsonl  session_143220_03e1fe.jsonl  session_143220_91b759.jsonl  session_143324_fd09d7.jsonl  session_143528_4d9d63.jsonl  session_143828_b3579c.jsonl  session_144319_9ae4c7.jsonl  session_144400_4ec343.jsonl  (+71 more)
agent/prompts/: rms-insurance-agent-v2.prompt.yaml  rms-insurance-agent.yaml
agent/tests/: __init__.py  conftest.py
(+30 files in other folders)
